--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@splinetool/react-spline": "^4.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "firebase": "^10.12.3",
     "lucide-react": "^0.408.0",
     "monsterapi": "^0.0.5",
