--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "firebase": "^10.12.3",
+    "framer-motion": "^11.3.8",
     "lucide-react": "^0.408.0",
     "monsterapi": "^0.0.5",
     "next": "14.2.5",
@@ -26,6 +27,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "simplex-noise": "^4.0.2",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
